--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <script>
 function nextPage() {
-    window.location.href = "love.html";
+    window.location.href = "mine.html";
 }
 </script>
 
