--- a/love.html
+++ b/love.html
@@ -50,7 +50,7 @@ button {
 </style>
 <script>
     function nextPage(){
-        window.location.href="mine.html";
+        window.location.href="yes.html";
 
     }
  </script>   
