--- a/mine.html
+++ b/mine.html
@@ -61,7 +61,7 @@
 
 <script>
 function goYes() {
-    window.location.href = "yes.html";
+    window.location.href = "love.html";
 }
 function goNo() {
     window.location.href = "no.html";
@@ -76,7 +76,7 @@ function goNo() {
 
     <br>
 
-    <button class="yes" onclick="goYes()">High on energy😎</button>
+    <button class="love" onclick="goYes()">High on energy😎</button>
     <button class="no" onclick="goNo()">No, I’m kinda drained today😭</button>
 </div>
 
