--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ function nextPage() {
      alt="Cute Dancing Cat" 
      onclick="nextPage()">
 
-<h1>My Kuchupuchu 💖</h1>
+<h1>Hey Kuchupuchu 💖</h1>
 <button onclick="nextPage()">Click to Continue ➜</button>
 
 </body>
